# squid-hw-test

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: buttons.rs  display.rs  hardware.rs  leds.rs  main.rs  touch.rs  watchdog.rs  wifi.rs
